# fhnw-spectro

./: pyproject.toml
notebooks/: extract_spectrum.ipynb
src/spectro/: config.py  image.py  server.py
